--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,1 +1,21 @@
+.card {
+  transition: box-shadow 0.3s;
 
+  &-image {
+    overflow: hidden;
+  }
+
+  &-image img {
+    object-fit: contain;
+    transform: scale(1);
+    transition: transform 0.75s;
+  }
+
+  &:hover {
+    box-shadow: 0 5px 10px 10px #eee;
+  }
+
+  &:hover .card-image img {
+    transform: scale(2);
+  }
+}
