--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,12 @@
 
 .movies {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
+}
+
+.card {
+  padding-top: 5px;
 }
 
 .card-image img {
