--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -1,1 +1,14 @@
+.page-content {
+  padding: 20px;
+}
 
+.sidebar {
+  padding: 20px;
+  border-left: 1px solid lightgray;
+}
+
+.movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
