--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -1,3 +1,7 @@
+.page-content {
+  padding: 20px;
+}
+
 .movies {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
