--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,12 @@
   border-left: 1px solid lightgray;
 }
 
+.movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
 .card-image img {
   object-fit: contain;
 }
