--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,11 @@
   padding: 20px;
   border-left: 1px solid lightgray;
 }
+
+.input {
+  margin-top: 10px;
+  width: 100%;
+  height: 40px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
+
