--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,5 @@
   margin-top: 10px;
   width: 100%;
   height: 40px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5)
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-
