--- a/src/App.scss
+++ b/src/App.scss
@@ -12,14 +12,10 @@
 .sidebar {
   padding: 20px;
   border-left: 1px solid lightgray;
-}
 
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
+  &__text {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
