solution after comments

--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -1,1 +1,11 @@
-// 
+.movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+  }
+}
