--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -3,3 +3,12 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
+
+ul {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  list-style-type: none;
+}
