--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,1 +1,8 @@
-// 
+.card-image img {
+  object-fit: contain;
+}
+
+.card:hover {
+  background-color:rgba(200, 200, 200, 0.6);
+  cursor: pointer;
+}
