--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,8 +1,12 @@
-.card-image img {
-  object-fit: contain;
-}
+.card {
+  transition: background-color 0.3s;
 
-.card:hover {
-  background-color:rgba(200, 200, 200, 0.6);
-  cursor: pointer;
+  &:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+    cursor: pointer;
+  }
+
+  &-image__logo {
+    object-fit: contain;
+  }
 }
