--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   grid-template: auto / 1fr 400px;
   column-gap: 20px;
   min-height: 100vh;
+  background-color: rgb(128, 185, 185);
 }
 
 .page-content {
@@ -11,15 +12,6 @@
 
 .sidebar {
   padding: 20px;
-  border-left: 1px solid lightgray;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
+  border-left: 1px solid rgb(0, 0, 0);
+  color: #000;
 }
