--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,1 +1,15 @@
-// 
+.card {
+  padding-top: 20px;
+}
+
+.media-content {
+  height: 100px;
+}
+
+.card-content {
+  height: 360px;
+}
+
+.card-image img {
+  object-fit: contain;
+}
