--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,17 @@
+ul,
+li,
+p,
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
 .page {
   display: grid;
   grid-template: auto / 1fr 400px;
