--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./components/MoviesList/MoviesList";
+
 .page {
   display: grid;
   grid-template: auto / 1fr 400px;
@@ -12,14 +14,4 @@
 .sidebar {
   padding: 20px;
   border-left: 1px solid lightgray;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
 }
