--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template: auto / 1fr 400px;
   column-gap: 20px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .page-content {
