--- a/src/App.scss
+++ b/src/App.scss
@@ -10,20 +10,10 @@ iframe {
 }
 
 .page-content {
-  padding: 20px;
+  padding: 1.5em;
 }
 
 .sidebar {
   padding: 20px;
   border-left: 1px solid lightgray;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
 }
