fixed code style

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
   padding: 20px;
 }
 
-.movie {
+.movies {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
