--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,17 @@
-iframe {
-  display: none;
-}
+@import "reset";
 
-.page {
+.app-page {
   display: grid;
   grid-template: auto / 1fr 400px;
   column-gap: 20px;
   min-height: 100vh;
-}
 
-.page-content {
-  padding: 20px;
-}
+  &__content {
+    padding: 20px;
+  }
 
-.sidebar {
-  padding: 20px;
-  border-left: 1px solid lightgray;
+  &__sidebar {
+    padding: 20px;
+    border-left: 1px solid lightgray;
+  }
 }
