--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ iframe {
 
 .page {
   display: grid;
-  grid-template: auto / 1fr 400px;
+  grid-template: 1fr 400px;
   column-gap: 20px;
   min-height: 100vh;
 }
@@ -14,16 +14,7 @@ iframe {
 }
 
 .sidebar {
+  display: grid;
   padding: 20px;
   border-left: 1px solid lightgray;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
 }
