--- a/src/App.scss
+++ b/src/App.scss
@@ -1,29 +1,13 @@
-iframe {
-  display: none;
-}
+@import "./components/Sidebar/Sidebar.scss";
+@import "./components/reset.scss";
 
 .page {
   display: grid;
   grid-template: auto / 1fr 400px;
   column-gap: 20px;
   min-height: 100vh;
-}
 
-.page-content {
-  padding: 20px;
-}
-
-.sidebar {
-  padding: 20px;
-  border-left: 1px solid lightgray;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.card-image img {
-  object-fit: contain;
+  &-content {
+    padding: 20px;
+  }
 }
