--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,13 @@ iframe {
   display: none;
 }
 
+.page {
+  display: grid;
+  grid-template: auto / 1fr 400px;
+  column-gap: 20px;
+  min-height: 100vh;
+}
+
+.page-content {
+  padding: 20px;
+}
