--- a/src/App.scss
+++ b/src/App.scss
@@ -7,10 +7,10 @@ iframe {
   grid-template: auto / 1fr 400px;
   column-gap: 20px;
   min-height: 100vh;
-}
 
-.page-content {
-  padding: 20px;
+  &__content {
+    padding: 20px;
+  }
 }
 
 .sidebar {
