--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@ iframe {
   border-left: 1px solid lightgray;
 }
 
-.movies ul {
+.movies {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
